# talk-to-me

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
talktome/: epubparser.py  models.py  tagger.py  talktome.py  tts.py
